--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <segue destination="Eee-ki-SA2" kind="show" id="EFG-SD-FP7"/>
+                        <segue destination="Eee-ki-SA2" kind="show" identifier="toCategorySelector" id="EFG-SD-FP7"/>
                         <segue destination="Of0-2b-E0U" kind="show" id="SWh-LF-sNk"/>
                         <segue destination="cud-pD-QSt" kind="show" id="D0F-QG-krR"/>
                     </connections>
