--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0CQ-K0-qcd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,26 +9,48 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="irR-BK-VSJ">
+        <!--Tab Bar Controller-->
+        <scene sceneID="cf7-WD-hcT">
             <objects>
-                <navigationController id="SIU-Xd-0JK" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Tv5-Cj-S1O">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                <tabBarController id="0CQ-K0-qcd" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="MEO-4t-42O"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="ozs-Fo-Otj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="JAZ-FX-Lgk"/>
+                        <segue destination="3Bz-dp-8Av" kind="relationship" relationship="viewControllers" id="f6l-Su-87U"/>
+                        <segue destination="X2F-Mj-Nc0" kind="relationship" relationship="viewControllers" id="Chu-aW-BXR"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="egq-mI-cs0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L1T-dR-AnE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2029" y="-157"/>
+            <point key="canvasLocation" x="-1706" y="-1105"/>
         </scene>
-        <!--Opening View Controller-->
+        <!--Item-->
+        <scene sceneID="TGT-bJ-AEJ">
+            <objects>
+                <viewController id="X2F-Mj-Nc0" customClass="FavoritesViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0AW-iS-EHi"/>
+                        <viewControllerLayoutGuide type="bottom" id="uQO-vo-nYR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kbk-Q0-OHH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="oW6-3o-xlY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hns-1T-9Il" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-529" y="-1261"/>
+        </scene>
+        <!--PokeDex-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="OpeningViewController" customModule="Pokedex" sceneMemberID="viewController">
+                <viewController title="PokeDex" id="BYZ-38-t0r" customClass="OpeningViewController" customModule="Pokedex" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -38,7 +60,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="hAk-Q4-raL"/>
+                    <navigationItem key="navigationItem" id="pfD-bl-hQ5"/>
                     <connections>
                         <segue destination="Eee-ki-SA2" kind="show" identifier="toCategorySelector" id="EFG-SD-FP7"/>
                         <segue destination="Of0-2b-E0U" kind="show" identifier="toSearchBar" id="SWh-LF-sNk"/>
@@ -47,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-330" y="-38"/>
+            <point key="canvasLocation" x="489" y="-165"/>
         </scene>
         <!--Category Selection View Controller-->
         <scene sceneID="wo1-sd-04o">
@@ -112,7 +134,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4NG-iD-2eQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="752" y="-257"/>
+            <point key="canvasLocation" x="1690.4000000000001" y="-257.72113943028489"/>
         </scene>
         <!--Pokemon Profile View Controller-->
         <scene sceneID="Fo0-nE-iqo">
@@ -133,7 +155,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7hc-qw-BUb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1596" y="569"/>
+            <point key="canvasLocation" x="2535.1999999999998" y="568.9655172413793"/>
         </scene>
         <!--Google Search Web View Controller-->
         <scene sceneID="dyz-aF-eek">
@@ -151,7 +173,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pGt-Sv-a8N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2305" y="569"/>
+            <point key="canvasLocation" x="3244" y="568.9655172413793"/>
         </scene>
         <!--Search Results View Controller-->
         <scene sceneID="Xsp-Va-Imq">
@@ -172,7 +194,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IEK-Co-IFO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="870" y="569"/>
+            <point key="canvasLocation" x="1808.8" y="568.9655172413793"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="UFR-d2-AAq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Bz-dp-8Av" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="3h5-WH-Lou"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="veN-tN-9p3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fJA-t4-JS2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LrG-lM-5B7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-346" y="-306"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
